--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </form>
     <div class='results-div'>
         <h2>Results</h2>
-        <img src='results-img' alt='placeholder'>
+        <img class='results-img' alt='placeholder'>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="index.js"></script>
