--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Dog App</h1>
-    <form class='dog-box'>
-        <input type='number' class='amount_dogs' value='3' required>
-        <button type='submit' class='submit_button'></button>
-    </form>
-    <div class='results-div'>
-        <h2>Results</h2>
-        <img class='results-img' alt='placeholder'>
+    <div class='container'>
+        <h1>Dog App</h1>
+        <form class='dog-box'>
+            <input type='number' class='amount_dogs' value='3' required>
+            <button type='submit' class='submit_button'></button>
+        </form>
+        <section class='results'>
+            <h2>Results:</h2>
+            <img class='results-img' alt='placeholder'>
+        </section>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="index.js"></script>
 </body>
+
 </html>
