--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class='container'>
         <h1>Dog App</h1>
         <form class='dog-box'>
-            <input type='number' class='amount_dogs' value='3' required>
+            <input type='text' class='dog_breed' required>
             <button type='submit' class='submit_button'></button>
         </form>
         <section class='results'>
